fix paddings & z-index

--- a/src/main.css
+++ b/src/main.css
@@ -126,10 +126,11 @@ div {
 .list {
     padding: 0 3px;
     background-color: #333333;
+    z-index: 10;
 }
 
 .item-children {
-    margin-bottom: 5px;
+    padding-bottom: 5px;
 }
 
 .item:hover>.list {
